--- a/css/estilo.css
+++ b/css/estilo.css
@@ -30,3 +30,6 @@ body {
         padding: 10px; }
       body table tbody tr:nth-of-type(even) {
         background-color: #e2c46131; }
+
+.ocultar {
+  display: none; }
